2002-12-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :
	* docs/bnf.txt :

	  - Fixed bug that prevented the use of transformations that
	    do not have any parameters.

2002-10-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Added a more helpful message when a transformation fails
	    due to the addition of an atom whose negation is already
	    implied by other atoms in the expression.

	* exp/gnd_exp.c :

	  - Now the eval function will check elements of groups when
	    proving subset atoms. G1 is a subset of G2 if all elements
	    of G1 is also an element of G2. Conversely, if at least
	    one element of G1 is NOT in G2, then G1 is NOT a subset
	    of G2.

	  - Fixed the bug that causes the eval function to think that
	    explicitly defined atoms are automatically logical consequences
	    of the other atoms. Now the eval_atom function only looks
	    for logical consequences, not explicitly defined atoms.

2002-10-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Now has more verbose error messages.

	* datastruct/simplelist.c :
	* datastruct/stringlist.c :
	* ident/ident.c :
	* exp/comp_atom.h :
	* exp/gnd_atom.h :
	* exp/name.c :
	* trans/transdef.c :
	* trans/transref.c :

	  - Used global malloc macro.

	* common/epilog.h :

	  - Added malloc macros.

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* exp/comp_atom.c : 
	* exp/comp_exp.c :
	* exp/comp_exp.h :
	* exp/expression.h :
	* exp/gnd_atom.c :
	* exp/gnd_exp.c :
	* exp/gnd_exp.h :
	* exp/name.c :
	* ident/ident.c :
	* ident/ident.h :
	* ident/identlist.c :
	* ident/identlist.h :
	* ident/symtab.c :
	* ident/symtab.h :
	* trans/transdef.c :
	* trans/transdef.h :
	* trans/translist.c :
	* trans/translist.h :
	* trans/transref.c :
	* trans/transref.h :
	* trans/transtab.c :
	* trans/transtab.h :

	  - Now uses the globally-defined error codes.

	  - Some cleanup.

	* exp/comp_atom.c :